[EoC] Fixing the experiment IDs problem

IDs were not sent with request, because an incorrect URL was passed
for validation. This fixes the problem and adds an appropriate test.

Bug: 922604
Change-Id: Ifb288c9dd1cba073292d835b5f06610c84625924
Reviewed-on: https://chromium-review.googlesource.com/c/1416230
Reviewed-by: Patrick Noland <pnoland@chromium.org>
Commit-Queue: Filip Gorski <fgorski@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623476}